--- a/main.yml
+++ b/main.yml
@@ -1,11 +1,4 @@
 ---
-# - name: Configure Kali
-#   hosts: all
-#   gather_facts: true
-#   roles:
-#     - first_run
-#     - install_tools
-#     - customizations
 - name: Configure Kali
   hosts: all
   gather_facts: true
@@ -42,11 +35,11 @@
             name: notes
           when: clone_notes
 
-      rescue:
-        - name: Send discord notification
-          community.general.discord:
-            webhook_id: "1132408363796398204"
-            webhook_token: "raE9XnDXqiKqTW_K-kNR7yFK3bsVrLYjtmi4W5tuvXHRF0OY_tVvxZzWji6Lr6gLJPT5"
-            content: "Playbook failed on {{ ansible_hostname }} during the task ```json\n{{ ansible_failed_task | to_nice_json }}\n```"
-            avatar_url: "https://docs.ansible.com/ansible/latest/_static/images/logo_invert.png"
-            username: Ansible
+      # rescue:
+      #   - name: Send discord notification
+      #     community.general.discord:
+      #       webhook_id: "{{ webhook_id }}"
+      #       webhook_token: "{{ webhook_token }}"
+      #       content: "Playbook failed on {{ ansible_hostname }} during the task ```json\n{{ ansible_failed_task | to_nice_json }}\n```"
+      #       avatar_url: "https://docs.ansible.com/ansible/latest/_static/images/logo_invert.png"
+      #       username: Ansible
