Change private repos from https to ssh

--- a/roles/notes/vars/main.yml
+++ b/roles/notes/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 # vars file for notes
 private_repos:
-  - "https://github.com/AbraXa5/HTB"
-  - "https://github.com/AbraXa5/THM"
-  - "https://github.com/AbraXa5/CTFs"
+  - "git@htb.github.com:AbraXa5/HTB.git"
+  - "git@thm.github.com:AbraXa5/THM.git"
+  - "git@ctfs.github.com:AbraXa5/CTFs.git"
   - "https://github.com/AbraXa5/DigitalGarden"
