Disable venv requirement for pip install pipx

--- a/roles/install_tools/tasks/install_pipx.yml
+++ b/roles/install_tools/tasks/install_pipx.yml
@@ -2,6 +2,8 @@
 ---
 - name: Install pipx
   become_user: "{{ ansible_user }}"
+  environment:
+    PIP_REQUIRE_VIRTUALENV: "false"
   ansible.builtin.pip:
     name: pipx
     state: present
