Fix fzf repo permission issue

--- a/roles/install_tools/tasks/install_fzf.yml
+++ b/roles/install_tools/tasks/install_fzf.yml
@@ -6,6 +6,7 @@
   register: fzf_dir_stat
 
 - name: Clone FZF repo
+  become_user: "{{ ansible_user }}"
   ansible.builtin.git:
     repo: "https://github.com/junegunn/fzf.git"
     dest: "{{ fzf_dir }}"
