--- a/roles/dotfiles/tasks/install_tools.yml
+++ b/roles/dotfiles/tasks/install_tools.yml
@@ -1,13 +1,16 @@
+# roles/dotfiles/tasks/install_tools.yml
 ---
 - name: Clone fzf repository
+  become_user: "{{ ansible_user }}"
   ansible.builtin.git:
     repo: https://github.com/junegunn/fzf.git
-    dest: "{{ ansible_facts['user_dir'] }}/.fzf"
+    dest: "/home/{{ ansible_user }}/.fzf"
     depth: 1
 
 - name: Install fzf w/o any shell modifications
+  become_user: "{{ ansible_user }}"
   ansible.builtin.shell:
-    cmd: "{{ ansible_facts['user_dir'] }}/.fzf/install --no-update-rc --no-bash --no-zsh"
+    cmd: "/home/{{ ansible_user }}/.fzf/install --no-update-rc --no-bash --no-zsh"
   # noqa: command-instead-of-shell
   # noqa: no-changed-when
 
