--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -1,4 +1,4 @@
-# roles/notes/tasks/main.yml
+# roles/dotfiles/tasks/main.yml
 ---
 - name: Install Tools
   become: true
@@ -7,4 +7,4 @@
 - name: Clone dotfiles
   become: true
   become_user: "{{ ansible_user }}"
-  ansible.builtin.import_tasks: install_tools.yml
+  ansible.builtin.import_tasks: dotfiles.yml
