--- a/roles/first_run/tasks/regenerate_ssh_keys.yml
+++ b/roles/first_run/tasks/regenerate_ssh_keys.yml
@@ -1,6 +1,6 @@
 # roles/first_run/tasks/regenerate_ssh_keys.yml
 ---
-- name: Create Default Kali Keys Directory
+- name: Create default Kali keys directory
   ansible.builtin.file:
     path: "{{ default_keys_dir }}"
     state: directory
@@ -9,7 +9,7 @@
     group: root
   register: create_default_keys_dir
 
-- name: Regen default SSH host keys
+- name: Regenerate default SSH host keys
   when: create_default_keys_dir.changed
   block:
     - name: Find files SSH keys using pattern matching
