--- a/roles/install_tools/defaults/main.yml
+++ b/roles/install_tools/defaults/main.yml
@@ -20,6 +20,7 @@ ruby_version: "3.1.2"
 
 # Github repos to clone
 github_repos:
+  - "https://github.com/carlospolop/privilege-escalation-awesome-scripts-suite.git"
   - "https://github.com/diego-treitos/linux-smart-enumeration.git"
   - "https://github.com/mzet-/linux-exploit-suggester.git"
   - "https://github.com/rebootuser/LinEnum.git"
@@ -27,23 +28,30 @@ github_repos:
   - "https://github.com/cddmp/enum4linux-ng.git"
   - "https://github.com/bitsadmin/wesng.git"
   - "https://github.com/jaeles-project/gospider.git"
+  - "https://github.com/BlackArch/wordlistctl.git"
   - "https://github.com/ticarpi/jwt_tool.git"
   - "https://github.com/Srinivas11789/PcapXray.git"
   - "https://github.com/mzfr/liffy.git"
   - "https://github.com/D35m0nd142/LFISuite.git"
   - "https://github.com/jcesarstef/dotdotslash.git"
   - "https://github.com/codingo/NoSQLMap.git"
+  - "https://github.com/codingo/Interlace.git"
+  - "https://github.com/wagoodman/dive.git"
   - "https://github.com/stealthcopter/deepce.git"
   - "https://github.com/s0md3v/Photon.git"
   - "https://github.com/s0md3v/Decodify.git"
   - "https://github.com/s0md3v/XSStrike.git"
+  # - "https://github.com/jpillora/chisel.git"
+  - "https://github.com/evilpacket/DVCS-Pillage.git"
   - "https://github.com/techgaun/github-dorks.git"
   - "https://github.com/internetwache/GitTools.git"
+  - "https://github.com/UnkL4b/GitMiner.git"
   - "https://github.com/GONZOsint/gitrecon.git"
   - "https://github.com/HightechSec/git-scanner.git"
   - "https://github.com/sharsil/mailcat.git"
   - "https://github.com/Dionach/CMSmap.git"
   - "https://github.com/ajinabraham/CMSScan.git"
+  - "https://github.com/Tuhinshubhra/CMSeeK.git"
   - "https://github.com/commixproject/commix.git"
   - "https://github.com/Mebus/cupp.git"
   - "https://github.com/immunIT/drupwn.git"
@@ -55,14 +63,27 @@ github_repos:
   - "https://github.com/SecureAuthCorp/impacket.git"
   - "https://github.com/The-Viper-One/ActiveDirectoryAttackTool.git"
   - "https://github.com/adrecon/ADRecon.git"
+  - "https://github.com/WithSecureLabs/chainsaw.git"
   - "https://github.com/breenmachine/RottenPotatoNG.git"
+  # "TODO: Add juciy potato and juicypotatoNG"
   - "https://github.com/synacktiv/php_filter_chain_generator.git"
   - "https://github.com/christophetd/cloudflair.git"
   - "https://github.com/swisskyrepo/SSRFmap.git"
+  - "https://github.com/carlospolop/fuzzhttpbypass.git"
   - "https://github.com/tarunkant/Gopherus.git"
-  - "https://github.com/frohoff/ysoserial"
-  - "https://github.com/pwntester/ysoserial.net"
-  - "https://github.com/EnableSecurity/wafw00f.git"
+  - "https://github.com/incredibleindishell/SSRF_Vulnerable_Lab.git"
+  - "https://github.com/epinna/tplmap.git"
+  # - "https://github.com/nccgroup/ScoutSuite.git"
+  # - "https://github.com/RhinoSecurityLabs/cloudgoat.git"
+  # - "https://github.com/joshlarsen/aws-recon.git"
+  # - "https://github.com/duo-labs/cloudmapper.git"
+  # - "https://github.com/nccgroup/aws-inventory.git"
+  - "https://github.com/carlospolop/PurplePanda.git"
+  # - "https://github.com/1N3/IntruderPayloads.git"
+  # - "https://github.com/joaomatosf/jexboss.git"
+  # - "https://github.com/frohoff/ysoserial"
+  # - "https://github.com/pwntester/ysoserial.net"
+  # - "https://github.com/EnableSecurity/wafw00f.git"
   - "https://github.com/samratashok/nishang.git"
 
 # install_cargo
@@ -93,9 +114,14 @@ golang_tools_repos:
   - github.com/tomnomnom/anew
   - github.com/projectdiscovery/subfinder/v2/cmd/subfinder
   - github.com/projectdiscovery/httpx/cmd/httpx
+  # - github.com/projectdiscovery/simplehttpserver/cmd/simplehttpserver
+  - github.com/projectdiscovery/naabu/v2/cmd/naabu
   - github.com/projectdiscovery/nuclei/v2/cmd/nuclei
   - github.com/projectdiscovery/tlsx/cmd/tlsx
+  - github.com/projectdiscovery/interactsh/cmd/interactsh-client
+  - github.com/projectdiscovery/mapcidr/cmd/mapcidr
   - github.com/hakluke/hakrawler
+  - github.com/ferreiraklet/Jeeves
   - github.com/hahwul/jwt-hack
   - github.com/antonmedv/fx
   - github.com/homeport/dyff/cmd/dyff
@@ -103,6 +129,7 @@ golang_tools_repos:
   - github.com/ropnop/kerbrute
   - github.com/ndelphit/apkurlgrep
   - github.com/ropnop/go-windapsearch/cmd/windapsearch
+  # - github.com/projectdiscovery/cloudlist/cmd/cloudlist
 
 #  install_nvm
 nvm_version: "0.39.3"
@@ -113,6 +140,7 @@ pip_packages:
   - cowsay
   - pipenv
   - pwncat-cs
+  - pwncat
   - search-that-hash
   - name-that-hash
   - crackmapexec
@@ -124,6 +152,7 @@ pip_packages:
   - httpie
   - awscli
   - mycli
+  - shodan
   - stegoveritas
   - updog
   - usbrip
@@ -131,8 +160,10 @@ pip_packages:
   - git-dumper
   - git-vuln-finder
   - pywhat
+  - dunk
   - arjun
   - pylnk3
+  - peepdf
   - flask-unsign
   - threader3000
   - asciinema
@@ -141,9 +172,14 @@ pip_packages:
   - shell-functools
   - s3recon
   - s3scanner
+  - pacu
   - prowler
+  - scoutsuite
+  - cloudsplaining
+  - principalmapper
+  - wesng
   - pre-commit
 
 # setup_bloodhound
 bloodhound_version: "4.2.0"
-arch: "linux-amd64"
+arch: "linux-arm64"
