--- a/roles/install_tools/tasks/install_golang.yml
+++ b/roles/install_tools/tasks/install_golang.yml
@@ -7,7 +7,7 @@
     state: present
 
 - name: Add Golang environment variables to .zshrc
-  tags: add_to_path
+  tags: change_path
   become: true
   become_user: "{{ ansible_user }}"
   ansible.builtin.blockinfile:
