--- a/roles/install_tools/vars/main.yml
+++ b/roles/install_tools/vars/main.yml
@@ -147,3 +147,9 @@ pip_packages:
 # setup_bloodhound
 bloodhound_version: "4.3.1"
 bloodhound_arch: "linux-x64"
+
+# install_caido
+caido_version: "0.27.1"
+base_os: "linux"
+caido_desktop_hash: "70e08e2f"
+caido_cli_hash: "c5f8b3a9"
