Add tasks for pip installation using git

--- a/roles/install_tools/tasks/install_pipx.yml
+++ b/roles/install_tools/tasks/install_pipx.yml
@@ -20,3 +20,10 @@
     name: "{{ item }}"
     state: latest
   loop: "{{ pip_packages }}"
+
+- name: "Install pipx tools via github"
+  community.general.pipx:
+    name: "{{ item.name }}"
+    source: "{{ item.src }}"
+    state: latest
+  loop: "{{ pipx_git_install_tools }}"
