--- a/roles/install_tools/vars/main.yml
+++ b/roles/install_tools/vars/main.yml
@@ -2,13 +2,13 @@
 # vars file for install_tools
 # download_binaries
 tools_dir: "/home/{{ ansible_user }}/Tools"
-peas_version: "20230724-3e05f4c7"
-chisel_version: "1.8.1"
+peas_version: "20231015-0ad0e48c"
+chisel_version: "1.9.1"
 pspy_version: "1.2.1"
 mimikatz_version: "2.2.0-20220919"
 aquatone_version: "1.7.0"
 jython_version: "2.7.3"
-burpsuite_version: "2023.6.2"
+burpsuite_version: "2023.10.2.2"
 burp_binaries:
   - url: "https://repo1.maven.org/maven2/org/python/jython-standalone/{{ jython_version }}/jython-standalone-{{ jython_version }}.jar"
     filename: "jython-standalone-{{ jython_version }}.jar"
@@ -16,7 +16,7 @@ burp_binaries:
     filename: "burpsuite_{{ burpsuite_version }}.jar"
 
 # fix_evil-winrm
-ruby_version: "3.1.2"
+ruby_version: "3.2.2"
 
 # Github repos to clone
 github_repos:
@@ -29,9 +29,6 @@ github_repos:
   - "https://github.com/jaeles-project/gospider.git"
   - "https://github.com/ticarpi/jwt_tool.git"
   - "https://github.com/Srinivas11789/PcapXray.git"
-  - "https://github.com/mzfr/liffy.git"
-  - "https://github.com/D35m0nd142/LFISuite.git"
-  - "https://github.com/jcesarstef/dotdotslash.git"
   - "https://github.com/codingo/NoSQLMap.git"
   - "https://github.com/stealthcopter/deepce.git"
   - "https://github.com/s0md3v/Photon.git"
@@ -65,6 +62,27 @@ github_repos:
   - "https://github.com/EnableSecurity/wafw00f.git"
   - "https://github.com/samratashok/nishang.git"
   - "https://github.com/PowerShellMafia/PowerSploit.git"
+  - "https://github.com/the-useless-one/pywerview.git"
+  - "https://github.com/lefayjey/linWinPwn.git"
+  - "https://github.com/GhostPack/Certify.git"
+  - "https://github.com/r3motecontrol/Ghostpack-CompiledBinaries.git"
+  - "https://github.com/AlmondOffSec/PassTheCert.git"
+  - "https://github.com/ffuf/ffuf"
+  - "https://github.com/tarunkant/Gopherus.git"
+  - "https://github.com/pwndbg/pwndbg.git"
+  - "https://github.com/DigitalInterruption/cookie-monster.git"
+  - "https://github.com/stark0de/nginxpwner.git"
+  - "https://github.com/iphelix/dnschef.git"
+  - "https://github.com/s0md3v/hardcodes.git"
+  - "https://github.com/skelsec/kerberoast.git"
+  - "https://github.com/besimorhino/powercat.git"
+  - "https://github.com/itm4n/FullPowers.git"
+  - "https://github.com/itm4n/PrivescCheck.git"
+  - "https://github.com/Flangvik/SharpCollection.git"
+  - "https://github.com/Sq00ky/L33tLinked.git"
+  - "https://github.com/p0dalirius/LDAPmonitor.git"
+  - "https://github.com/ShutdownRepo/pyWhisker.git"
+  - "https://github.com/Syzik/DockerRegistryGrabber.git"
 
 # install_cargo
 cargo_dir: "/home/{{ ansible_user }}/.cargo"
@@ -104,6 +122,7 @@ golang_tools_repos:
   - github.com/ropnop/kerbrute
   - github.com/ndelphit/apkurlgrep
   - github.com/ropnop/go-windapsearch/cmd/windapsearch
+  - github.com/WangYihang/Platypus
 
 #  install_nvm
 nvm_version: "0.39.3"
@@ -118,7 +137,7 @@ pip_packages:
   # - name-that-hash
   - crackmapexec
   - ldapdomaindump
-  - impacket
+  # - impacket
   - bloodhound
   - httpx
   - html2text
@@ -147,16 +166,28 @@ pip_packages:
   - certipy-ad
   - certsync
   # - coercer
+  - pypykatz
+  - aclpwn
 
 pipx_git_install_tools:
   - name: certi.py
     src: git+https://github.com/zer1t0/certi.git
   - name: ldeep
     src: git+https://github.com/franc-pentest/ldeep
-  - name: pre2k
-    src: git+https://github.com/garrettfoster13/pre2k.git
-  - name: DonPAPI
-    src: git+https://github.com/login-securite/DonPAPI.git
+  # - name: pre2k
+  #   src: git+https://github.com/garrettfoster13/pre2k.git
+  # - name: DonPAPI
+  #   src: git+https://github.com/login-securite/DonPAPI.git
+  - name: bloodyAD
+    src: git+https://github.com/CravateRouge/bloodyAD.git
+  - name: autobloody.git
+    src: git+https://github.com/CravateRouge/autobloody.git
+  - name: kerberoast
+    src: git+https://github.com/skelsec/kerberoast.git
+  - name: impacket
+    src: git+https://github.com/fortra/impacket.git
+  - name: NetExec
+    src: git+https://github.com/Pennyw0rth/NetExec.git
   - name: pwncat-cs
     src: git+https://github.com/AbraXa5/pwncat.git
 
@@ -165,12 +196,32 @@ bloodhound_version: "4.3.1"
 bloodhound_arch: "linux-x64"
 
 # install_caido
-caido_version: "0.27.1"
+caido_version: "0.29.0"
 base_os: "linux"
-caido_desktop_hash: "70e08e2f"
-caido_cli_hash: "c5f8b3a9"
+caido_desktop_hash: "a8cef39b"
+caido_cli_hash: "1177c39f"
 
 # windows_tools
 
 adpeas_version: "main"
 adenum_version: "main"
+
+windows_binaries:
+  - url: "https://github.com/itm4n/FullPowers/releases/download/v0.1/FullPowers.exe"
+    filename: "FullPowers.exe"
+  - url: "https://github.com/itm4n/PrintSpoofer/releases/download/v1.0/PrintSpoofer64.exe"
+    filename: "PrintSpoofer64.exe"
+  - url: "https://github.com/BeichenDream/GodPotato/releases/download/V1.20/GodPotato-NET4.exe"
+    filename: "GodPotato-NET4.exe"
+  - url: "https://github.com/antonioCoco/RoguePotato/releases/download/1.0/RoguePotato.zip"
+    filename: "RoguePotato.zip"
+  - url: "https://github.com/Flangvik/SharpCollection/blob/master/NetFramework_4.5_x64/SweetPotato.exe"
+    filename: "SweetPotato.exe"
+  - url: "https://raw.githubusercontent.com/r3motecontrol/Ghostpack-CompiledBinaries/master/SharpUp.exe"
+    filename: "SharpUp.exe"
+  - url: "https://raw.githubusercontent.com/NotSoSecure/password_cracking_rules/master/OneRuleToRuleThemAll.rule"
+    filename: "OneRuleToRuleThemAll.rule"
+  - url: "https://github.com/carlospolop/winPE/blob/master/binaries/seatbelt/SeatbeltNet4AnyCPU.exe"
+    filename: "SeatbeltNet4AnyCPU.exe"
+  - url: "https://github.com/andrew-d/static-binaries/raw/master/binaries/windows/x86/nmap.exe"
+    filename: "nmap.exe"
