Update ansible-lint action

--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -3,6 +3,7 @@ name: ansible-lint
 on:
   pull_request:
     branches: ["main", "stable"]
+  workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the GitHub Actions Workflow page directly
 jobs:
   build:
     name: Ansible Lint
