--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,3 +6,4 @@ stdout_callback = yaml
 # Use the stdout_callback when running ad-hoc commands.
 bin_ansible_callbacks = True
 host_key_checking = False
+nocows = 1
