--- a/roles/dotfiles/vars/main.yml
+++ b/roles/dotfiles/vars/main.yml
@@ -4,6 +4,8 @@ dotfiles_repo: "git@dotfiles.github.com:AbraXa5/dotfiles"
 dotfiles_dest: "{{ ansible_facts['user_dir'] }}/.dotfiles.git"
 dotfiles_version: main
 
+install_starship: true
+
 # packages for dotfiles
 apt_packages:
   - bat
