Remove exa from apt_install
exa seems to be removed from the repos

--- a/roles/install_tools/tasks/install_tools_apt.yml
+++ b/roles/install_tools/tasks/install_tools_apt.yml
@@ -52,7 +52,7 @@
     - tmux
     - terminator
     - bat
-    - exa
+    # - exa # Removed from repos
     - gh
     - htop
     - silversearcher-ag
