Remove exa from apt_packages for dotfiles

--- a/roles/dotfiles/vars/main.yml
+++ b/roles/dotfiles/vars/main.yml
@@ -9,7 +9,7 @@ starship: true
 # packages for dotfiles
 apt_packages:
   - bat
-  - exa
+  # - exa # Renoved from repos
   - silversearcher-ag
   - xclip
   - nnn
