--- a/roles/install_tools/tasks/install_cargo.yml
+++ b/roles/install_tools/tasks/install_cargo.yml
@@ -18,3 +18,8 @@
       ansible.builtin.command: "/tmp/rust_install.sh --no-modify-path --profile default -y"
       args:
         creates: "{{ cargo_dir }}"
+
+- name: Install cargo packages
+  community.general.cargo:
+    name: "{{ item }}"
+  loop: "{{ cargo_tools }}"
